--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "spellright.language": [],
-  "spellright.documentTypes": ["latex", "plaintext"]
+  "spellright.documentTypes": ["latex", "plaintext"],
+  "cSpell.words": ["KAPI", "KERROR", "KRELEASE", "KWARN"]
 }
