--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "spellright.language": [],
   "spellright.documentTypes": ["latex", "plaintext"],
-  "cSpell.words": ["KAPI", "KERROR", "KRELEASE", "KWARN"]
+  "cSpell.words": ["KAPI", "KASSERTIONS", "KERROR", "KRELEASE", "KWARN"]
 }
